<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<artifactId>projects-core</artifactId>
	<packaging>jar</packaging>

	<name>Java projects core</name>

	<version>1.0.17</version>

    <description>General utilities that will be used in Java projects</description>

    <url>https://github.com/etuzon/java-projects-core</url>

    <scm>
        <url>https://github.com/etuzon/java-projects-core</url>
        <connection>https://github.com/etuzon/java-projects-core.git</connection>
    </scm>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<parent>
		<groupId>io.github.etuzon</groupId>
		<artifactId>base-pom</artifactId>
		<version>1.0.18-base</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>18</maven.compiler.source>
		<maven.compiler.target>18</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom2</artifactId>
			<version>2.0.6.1</version>
		</dependency>
	</dependencies>
</project>